--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.tres linguist-language=GDScript
 *.tscn linguist-language=GDScript
-*.tres linguist-language=GDScript
+*.flag linguist-language=GDScript
