--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.tres linguist-language=GDScript
 *.tscn linguist-language=GDScript
 *.anm linguist-language=GDScript
+*.gd linguist-language=GDScript
