--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
 *.tres linguist-language=GDScript
 *.tscn linguist-language=GDScript
-*.flag linguist-language=GDScript
-*.png linguist-language=GDScript
+*.anm linguist-language=GDScript
