--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.tres text=GDScript
-*.tscn text=GDScript
-*.anm text=GDScript
+*.tscn linguist-language=GDScript
+*.tres linguist-language=GDScript
+*.anm linguist-language=GDScript
